--- a/OOPatterns/MainWindow.xaml
+++ b/OOPatterns/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="OOPaterns.MainWindow"
+﻿<Window x:Class="OOPatterns.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OOPaterns"
+        xmlns:local="clr-namespace:OOPatterns"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
