--- a/OOPatterns/Windows/MainWindow.xaml
+++ b/OOPatterns/Windows/MainWindow.xaml
@@ -2,43 +2,178 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:p="clr-namespace:OOPatterns.Properties"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:ctrl = "clr-namespace:OOPatterns.Windows.Controls" 
         xmlns:local="clr-namespace:OOPatterns"
         mc:Ignorable="d"
-        BorderBrush="Black"
+        BorderBrush="{DynamicResource Primary}"
         BorderThickness="1"
-        Title="MainWindow" Height="538" Width="850.333" MinWidth="500" MinHeight="300" ResizeMode="NoResize" WindowStyle="None">
+        AllowsTransparency="True"
+        Title="MainWindow" Height="600" Width="1100" MinWidth="500" MinHeight="300" ResizeMode="CanResizeWithGrip" WindowStyle="None" WindowStartupLocation="CenterScreen" Icon="/OOPatterns;component/Images/logo.png">
     <Grid>
-        <Grid Width="250" HorizontalAlignment="Left" Background="Black" Name="LeftToolbar">
-            <StackPanel Orientation="Horizontal" Height="50" VerticalAlignment="Top" Margin="0,25,0,0" Name="Diagram" MouseEnter="Nav_MouseEnter" MouseLeave="Nav_MouseLeave">
-                <Image Width="50" Height="50"/>
-                <Label Height="50" Content="Диаграмма" Foreground="White" FontSize="20" VerticalContentAlignment="Center"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Height="50" VerticalAlignment="Top" Margin="0,75,0,0" Name="Edit" MouseEnter="Nav_MouseEnter" MouseLeave="Nav_MouseLeave">
-                <Image Width="50" Height="50"/>
-                <Label Height="50" Content="Редактирование" Foreground="White" FontSize="20" VerticalContentAlignment="Center"/>
-            </StackPanel>
+        <Border BorderBrush="{DynamicResource PrimaryForeground}" BorderThickness="0,1,1,1">
+        <Grid Width="168" HorizontalAlignment="Left" Background="{DynamicResource Primary}" Name="LeftToolbar" Margin="0,25,0,15">
+            <Border Height="40" VerticalAlignment="Top">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Name="Diagram" Background="{DynamicResource PrimaryDark}">
+                    <Image Width="40" Height="40"/>
+                    <Label Height="40" Content="Диаграмма" Foreground="{DynamicResource PrimaryForeground}" FontSize="15" VerticalContentAlignment="Center"/>
+                </StackPanel>
+            </Border>
+            <Border Height="40" VerticalAlignment="Top" Margin="0,40,0,0">
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Name="Edit" IsEnabled="False">
+                    <Image Width="40" Height="40"/>
+                    <Label Height="40" Content="Редактирование" Foreground="{DynamicResource DisabledForeground}" FontSize="15" VerticalContentAlignment="Center"/>
+                </StackPanel>
+            </Border>
         </Grid>
-        <Grid Height="25" VerticalAlignment="Top" Background="Black" Name="TopToolbar" MouseLeftButtonDown="TopToolbar_MouseLeftButtonDown">
-            <Label HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,0,0" Content="OOPatterns" Foreground="White" FontSize="12" FontFamily="Copperplate Gothic Bold" Name="Name" MouseLeftButtonDown="Name_MouseLeftButtonDown">
+        </Border>
+        <Grid Height="25" VerticalAlignment="Top" Background="{DynamicResource Primary}" Name="TopToolbar" MouseLeftButtonDown="TopToolbar_MouseLeftButtonDown">
+            <Label HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,0,0" Content="OOPatterns" Foreground="{DynamicResource PrimaryForeground}" FontSize="12" FontFamily="Copperplate Gothic Bold" Name="Name" MouseLeftButtonDown="Name_MouseLeftButtonDown">
                 <Label.ContextMenu>
                     <ContextMenu>
                         <MenuItem Header="New"/>
                         <MenuItem Header="Open"/>
                         <MenuItem Header="Save"/>
-                        <Separator />
+                        <Separator/>
+                        <MenuItem Header="Exit"/>
                     </ContextMenu>
                 </Label.ContextMenu>
             </Label>
-            <Button Width="25" Height="25" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,50,0" Background="Transparent" BorderBrush="Transparent" Content="_" FontSize="12" Foreground="White" Name="Hide" Click="Hide_Click"/>
-            <Button Width="25" Height="25" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,0,25,0" Background="Transparent" BorderBrush="Transparent" Content="□" FontSize="12" Foreground="White" Name="Maximize" Click="Maximize_Click"/>
-            <Button Width="25" Height="25" HorizontalAlignment="Right" VerticalAlignment="Top" Background="Transparent" BorderBrush="Transparent" Content="x" FontSize="12" Foreground="White" Name="Close" Click="Close_Click"/>
+            
+            <ctrl:ButtonControl Width="25" Height="26" Margin="0,-1,50, 0"  HorizontalAlignment="Right" VerticalAlignment="Top" Click="Hide_Click" x:Name="Hide" Text="_" FontSize="15"
+                                Background="{DynamicResource SystemButton}" NormalBackground="{DynamicResource SystemButton}" 
+                                MouseOverBackground="{DynamicResource OverSystemButton}" BorderThickness="0"/>
+            <ctrl:ButtonControl Width="25" Height="26" Margin="0,-1,25,0"  HorizontalAlignment="Right" VerticalAlignment="Top" Click="Maximize_Click" x:Name="Maximize" Text="□" FontSize="15"
+                                Background="{DynamicResource SystemButton}" NormalBackground="{DynamicResource SystemButton}" 
+                                MouseOverBackground="{DynamicResource OverSystemButton}" BorderThickness="0"/>
+            <ctrl:ButtonControl Width="25" Height="26" Margin="0,-1,-1, 0"  HorizontalAlignment="Right" VerticalAlignment="Top" Click="Close_Click" x:Name="Close" Text="x" FontSize="15"
+                                Background="{DynamicResource SystemButton}" NormalBackground="{DynamicResource SystemButton}" 
+                                MouseOverBackground="{DynamicResource OverCloseButton}" BorderThickness="0"/>
         </Grid>
-        <Grid Height="25" VerticalAlignment="Bottom" Background="Black" Name="BottomToolbar">
+        <Grid Height="15" VerticalAlignment="Bottom" Background="{DynamicResource Primary}" Name="BottomToolbar">
             <Label HorizontalAlignment="Left" Margin="250,0,0,0" Name="State" Foreground="White" FontSize="11"/>
         </Grid>
-        <Button Content="Button" HorizontalAlignment="Right" Margin="0,150,10,0" VerticalAlignment="Top" Width="75" Name="configurationButton" Click="configurationButton_Click"/>
-        <Canvas HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="250,25,100,25" Background="Silver" Name="ElementsView" MouseUp="ElementsView_MouseUp" MouseDown="ElementsView_MouseDown" MouseMove="ElementsView_MouseMove"/>
-        <!--<Label Content="" HorizontalAlignment="Right" VerticalAlignment="Top" Width="75" Margin="0,100,10,0" Name="State"/>-->
+        <Grid HorizontalAlignment="Right" Margin="0,25,-201,15" Width="200" Name="RightToolbar">
+            <Border BorderBrush="{DynamicResource PrimaryForeground}" BorderThickness="1,1,0,1">
+                <ScrollViewer VerticalScrollBarVisibility="Hidden" PreviewMouseWheel="ScrollViewer_PreviewMouseWheel" Background="{DynamicResource Primary}">
+                    <StackPanel Orientation="Vertical" Margin="0,10,0,10">
+                        <StackPanel Orientation="Horizontal" Height="25" VerticalAlignment="Top">
+                            <Label Content="{x:Static p:Resources.name}" FontSize="12" Width="70" Foreground="{DynamicResource PrimaryForeground}"/>
+                            <TextBox FontSize="12" HorizontalAlignment="Right" Width="120" Margin="5,0,5,0" Style="{StaticResource TextBoxStyle}" Name="NameTB"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal" Height="25" Margin="0,5,0,0" VerticalAlignment="Top">
+                            <Label Content="{x:Static p:Resources.type}" FontSize="12" Width="70" Foreground="{DynamicResource PrimaryForeground}"/>
+                            <ComboBox HorizontalAlignment="Left" Margin="5,0,5,0" VerticalAlignment="Top" Width="120" Height="25" Name="Type_CB" Style="{StaticResource ComboBoxStyle}"/>
+                        </StackPanel>
+                        <!--Parents-->
+                        <Border BorderThickness="0.5" BorderBrush="Silver" Margin="0,5,0,0">
+                            <StackPanel Orientation="Vertical" Height="25" Name="Parents" Margin="5,0">
+                                <StackPanel Orientation="Horizontal" Height="25" MouseDown="Panel_MouseDown">
+                                    <Label Content="{x:Static p:Resources.parents}" FontSize="12" Width="168" HorizontalContentAlignment="Center" Foreground="{DynamicResource PrimaryForeground}"/>
+                                    <Label RenderTransformOrigin=".5,.5" Width="20" Padding="0" Foreground="{DynamicResource PrimaryForeground}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Name="Parents_Arrow">
+                                        <Path Data="M0,0 L0,2 L4,6 L8,2 L8,0 L4,2 z" Fill="{DynamicResource PrimaryForeground}"/>
+                                    </Label>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Height="25" Margin="0,5,0,0">
+                                    <ComboBox HorizontalAlignment="Left" VerticalAlignment="Top" Width="160" Margin="0,0,5,0" Name="Parent_CB" Height="25" Style="{DynamicResource ComboBoxStyle}">
+                                        <ComboBox.ItemTemplate>
+                                            <DataTemplate>
+                                                <StackPanel Orientation="Horizontal">
+                                                    <Image Source="{Binding ImagePath}" Margin="0,0,5,0" Width="10" Height="10"/>
+                                                    <TextBlock Text="{Binding Name}"></TextBlock>
+                                                </StackPanel>
+                                            </DataTemplate>
+                                        </ComboBox.ItemTemplate>
+                                    </ComboBox>
+                                    <ctrl:ButtonControl Width="23" Height="25" FontSize="14" Text="+"/>
+                                </StackPanel>
+                                <ListBox HorizontalAlignment="Left" Height="135" Margin="0,5,0,0" VerticalAlignment="Top" Width="188" Name="Parents_LB" Background="{DynamicResource PrimaryLight}">
+                                    <ListBox.ItemTemplate>
+                                        <DataTemplate>
+                                            <StackPanel Orientation="Horizontal">
+                                                <TextBlock Text="{Binding Name}"/>
+                                            </StackPanel>
+                                        </DataTemplate>
+                                    </ListBox.ItemTemplate>
+                                </ListBox>
+                            </StackPanel>
+                        </Border>
+                        <!--Variables-->
+                        <Border BorderThickness="0.5" BorderBrush="Silver">
+                            <StackPanel Orientation="Vertical" Height="25" Name="Variables" Margin="5,0">
+                                <StackPanel Orientation="Horizontal" Height="25" MouseDown="Panel_MouseDown">
+                                    <Label Content="{x:Static p:Resources.variables}" FontSize="12" Width="168" HorizontalContentAlignment="Center" Foreground="{DynamicResource PrimaryForeground}"/>
+                                    <Label RenderTransformOrigin=".5,.5" Width="20" Padding="0" Foreground="{DynamicResource PrimaryForeground}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  Name="Variables_Arrow">
+                                        <Path Data="M0,0 L0,2 L4,6 L8,2 L8,0 L4,2 z" Fill="{DynamicResource PrimaryForeground}"/>
+                                    </Label>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Height="25" Margin="0,5,0,0">
+                                    <ctrl:ButtonControl Width="188" Height="25" Text="{x:Static p:Resources.add_variable}" Click="AddVariable_Click"/>
+                                </StackPanel>
+                                <ListView HorizontalAlignment="Left" Height="135" Margin="0,5,0,0" VerticalAlignment="Top" Width="188" Name="Variables_LV" 
+                                          Background="{DynamicResource PrimaryLight}" Foreground="{DynamicResource PrimaryForeground}">
+                                    <ListView.View>
+                                        <GridView>
+                                            <GridView.Columns>
+                                                <GridViewColumn Header="{x:Static p:Resources.access}" DisplayMemberBinding="{Binding Path=Access}" Width="50"></GridViewColumn>
+                                                <GridViewColumn Header="{x:Static p:Resources.type}" DisplayMemberBinding="{Binding Path=Type}" Width="50"></GridViewColumn>
+                                                <GridViewColumn Header="{x:Static p:Resources.name}" DisplayMemberBinding="{Binding Path=Name}" Width="100"></GridViewColumn>
+                                            </GridView.Columns>
+                                        </GridView>
+                                    </ListView.View>
+                                </ListView>
+                            </StackPanel>
+                        </Border>
+                        <!--Methods-->
+                        <Border BorderThickness="0.5" BorderBrush="Silver">
+                            <StackPanel Orientation="Vertical" Height="25" Name="Methods" Margin="5,0">
+                                <StackPanel Orientation="Horizontal" Height="25" MouseDown="Panel_MouseDown">
+                                    <Label Content="{x:Static p:Resources.methods}" FontSize="12" Width="168" HorizontalContentAlignment="Center" Foreground="{DynamicResource PrimaryForeground}"/>
+                                    <Label RenderTransformOrigin=".5,.5" Width="20" Padding="0" Foreground="{DynamicResource PrimaryForeground}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"  Name="Methods_Arrow">
+                                        <Path Data="M0,0 L0,2 L4,6 L8,2 L8,0 L4,2 z" Fill="{DynamicResource PrimaryForeground}"/>
+                                    </Label>
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Height="25" Margin="0,5,0,0">
+                                    <ctrl:ButtonControl Width="188" Height="25" Text="{x:Static p:Resources.add_method}" Click="AddMethod_Click"/>
+                                </StackPanel>
+                                <ListView HorizontalAlignment="Left" Height="135" Margin="0,5,0,0" VerticalAlignment="Top" Width="188" Name="Methods_LV" 
+                                          Background="{DynamicResource PrimaryLight}"  Foreground="{DynamicResource PrimaryForeground}">
+                                    <ListView.View>
+                                        <GridView>
+                                            <GridView.Columns>
+                                                <GridViewColumn Header="{x:Static p:Resources.access}" DisplayMemberBinding="{Binding Path=Access}" Width="50"></GridViewColumn>
+                                                <GridViewColumn Header="{x:Static p:Resources.type}" DisplayMemberBinding="{Binding Path=Type}" Width="50"></GridViewColumn>
+                                                <GridViewColumn Header="{x:Static p:Resources.name}" DisplayMemberBinding="{Binding Path=Name}" Width="100"></GridViewColumn>
+                                            </GridView.Columns>
+                                        </GridView>
+                                    </ListView.View>
+                                </ListView>
+                            </StackPanel>
+                        </Border>
+                    </StackPanel>
+                </ScrollViewer>
+            </Border>
+        </Grid>
+        <Canvas HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="170,25,0,15" Background="Silver" Name="ElementsView">
+            <!--
+            <Canvas.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="{x:Static p:Resources.add}">
+                        <MenuItem Header="class" Click="ElementsViewContextMenuItem_Click">
+                            <MenuItem.Icon>
+                                <Image Source="/Images/class_ico.png"/>
+                            </MenuItem.Icon>
+                        </MenuItem>
+                        <MenuItem Header="interface" Click="ElementsViewContextMenuItem_Click">
+                            <MenuItem.Icon>
+                                <Image Source="/Images/interface_ico.png"/>
+                            </MenuItem.Icon>
+                        </MenuItem>
+                    </MenuItem>
+                </ContextMenu>
+            </Canvas.ContextMenu>
+            -->
+        </Canvas>
     </Grid>
 </Window>
