--- a/OOPatterns/Windows/Themes/Brushes.xaml
+++ b/OOPatterns/Windows/Themes/Brushes.xaml
@@ -15,4 +15,17 @@
     <SolidColorBrush x:Key="OverSystemButton" Color="#dd3E3E3E" />
     <SolidColorBrush x:Key="OverSystemButtonForeground" Color="White" />
     <SolidColorBrush x:Key="OverCloseButton" Color="#FF3939" />
+
+    <LinearGradientBrush x:Key="ClassGradient" StartPoint="0,0" EndPoint="0,1" Opacity="0.5">
+        <GradientStop Color="White" Offset="0"/>
+        <GradientStop Color="#87bcf2" Offset="1.2" />
+    </LinearGradientBrush>
+
+    <LinearGradientBrush x:Key="InterfaceGradient" StartPoint="0,0" EndPoint="0,1" Opacity="0.5">
+        <GradientStop Color="White" Offset="0"/>
+        <GradientStop Color="Orange" Offset="1.2" />
+    </LinearGradientBrush>
+
+    <SolidColorBrush x:Key="SelectedItemBrush" Color="#12b76f" Opacity="0.7"/>
+    <SolidColorBrush x:Key="NormalItemBrush" Color="Black" Opacity="0.7"/>
 </ResourceDictionary>
