--- a/OOPatterns/Windows/Themes/Brushes_light.xaml
+++ b/OOPatterns/Windows/Themes/Brushes_light.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:OOPatterns.Windows.Themes">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--
     <SolidColorBrush x:Key="DefaultColor" Color="#2d2d2d"/>
     <SolidColorBrush x:Key="AdditionalColor" Color="#1b1b1c"/>
@@ -33,4 +32,17 @@
     <SolidColorBrush x:Key="OverSystemButton" Color="#E0E0E0" />
     <SolidColorBrush x:Key="OverSystemButtonForeground" Color="White" />
     <SolidColorBrush x:Key="OverCloseButton" Color="#FF3939" />
+
+    <LinearGradientBrush x:Key="ClassGradient" StartPoint="0,0" EndPoint="0,1" Opacity="0.5">
+        <GradientStop Color="White" Offset="0"/>
+        <GradientStop Color="#87bcf2" Offset="1.2" />
+    </LinearGradientBrush>
+
+    <LinearGradientBrush x:Key="InterfaceGradient" StartPoint="0,0" EndPoint="0,1" Opacity="0.5">
+        <GradientStop Color="White" Offset="0"/>
+        <GradientStop Color="Orange" Offset="1.2" />
+    </LinearGradientBrush>
+
+    <SolidColorBrush x:Key="SelectedItemBrush" Color="#12b76f" Opacity="0.7"/>
+    <SolidColorBrush x:Key="NormalItemBrush" Color="Black" Opacity="0.7"/>
 </ResourceDictionary>
