--- a/OOPatterns/Windows/Themes/TextStyle.xaml
+++ b/OOPatterns/Windows/Themes/TextStyle.xaml
@@ -1,5 +1,4 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:OOPatterns.Windows.Themes">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <FontFamily x:Key="PrimaryFontFamily">Times New Roman</FontFamily>
 </ResourceDictionary>
